# mirror-ng

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README-DATA.md  README.md  docker-compose.prod.yml  docker-compose.yml  fly.toml  old-readme.md
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
backend/app/: agent.py  alias_utils.py  auth.py  balance_manager.py  database.py  email_fetcher.py  gmail_auth.py  intent_agent.py  llm_clients.py  main.py  models.py  narration_cleaner.py  temporal.py
backend/app/ml/: anomaly.py  category_model.pkl  classifier.py  forecaster.py  merchant.py  recurring.py
backend/app/parsers/: __init__.py  base.py  gtbank.py  moniepoint.py  opay.py  stanbic.py  stanchart.py  sterling.py  wema.py
backend/scripts/: clean_sterling_db.py
backend/tests/: __init__.py  test_imap_simple.py  test_parsers.py  test_yahoo_fetcher.py
docs/: CONTRIBUTING.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AliasSpreadModal.jsx  BankCard.jsx  CustomSelect.jsx  Dashboard.css  DashboardHeader.jsx  FloatingNavItem.jsx  MLGroupView.jsx  Navitem.jsx  OnboardingGapsModal.jsx  SessionOnboarding.jsx  SpendChart.jsx  TransactionRow.jsx
frontend/src/contexts/: BalanceContext.jsx
frontend/src/hooks/: useBlurContext.jsx  useMirrorMath.js
frontend/src/pages/: AgentChat.jsx  Dashboard.jsx  ExecutiveDashboard.jsx  InsightsPanel.jsx  Landing.jsx  SecretImap.jsx  Settings.jsx
frontend/src/services/: api.js  localData.js
frontend/src/utils/: transactionHelpers.js
scripts/: bootstrap-oracle.sh
